CORS configuration is changed and moved to properties file